updated swagger file to contain delete endpoint and created server with get endpoint
